--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,22 @@
     <script src="assets/vendor/morrisjs/morris.min.js"></script>
     <script src="assets/data/morris-data.js"></script>
 
+    <!-- DataTables JavaScript -->
+    <script src="assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="assets/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
+    <script src="assets/vendor/datatables-responsive/dataTables.responsive.js"></script>
+
     <!-- Custom Theme JavaScript -->
     <script src="assets/js/sb-admin-2.js"></script>
+
+    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+    <script>
+    $(document).ready(function() {
+        $('#dataTables-example').DataTable({
+            responsive: true
+        });
+    });
+    </script>
+
   </body>
 </html>
