--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     <!-- Morris Charts JavaScript -->
     <script src="assets/vendor/raphael/raphael.min.js"></script>
     <script src="assets/vendor/morrisjs/morris.min.js"></script>
-    <script src="assets/data/morris-data.js"></script>
+    <!-- <script src="assets/data/morris-data.js"></script> -->
 
     <!-- DataTables JavaScript -->
     <script src="assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
