示範子路由設定與套版注意事項

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,15 @@
     <script src="assets/vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
     <script src="assets/vendor/datatables-responsive/dataTables.responsive.js"></script>
 
+    <!-- Flot Charts JavaScript -->
+    <script src="assets/vendor/flot/excanvas.min.js"></script>
+    <script src="assets/vendor/flot/jquery.flot.js"></script>
+    <script src="assets/vendor/flot/jquery.flot.pie.js"></script>
+    <script src="assets/vendor/flot/jquery.flot.resize.js"></script>
+    <script src="assets/vendor/flot/jquery.flot.time.js"></script>
+    <script src="assets/vendor/flot-tooltip/jquery.flot.tooltip.min.js"></script>
+    <!-- <script src="assets/data/flot-data.js"></script> -->
+
     <!-- Custom Theme JavaScript -->
     <script src="assets/js/sb-admin-2.js"></script>
 
